GNOME Bugzilla – Bug 706753
About dialog doesn't have credits and license disclaimer
Last modified: 2013-08-25 21:22:08 UTC
There is no credits button in the about dialog, and the license is just a string "GPLv3". Also, the copyright string doesn't match other GNOME applications' about box.
Created attachment 253060 [details] [review] aboutDialog: Add and update some properties - Use license-type property to set license - Add credits for authors and artists - Update copyright string to match other GNOME applications
Comment on attachment 253060 [details] [review] aboutDialog: Add and update some properties Thanks, pushed commit 3f889f811302290154cf255ef15b4e498bffba31