aboutDialog: Add and update some properties

- Use license-type property to set license
- Add credits for authors and artists
- Update copyright string to match other GNOME applications

https://bugzilla.gnome.org/show_bug.cgi?id=706753